# robotframework

./: .gitignore  README.md  checked_output.xml  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html
src/try_rf/: __init__.py
tests/: assignment.robot  log.html  output.xml  report.html  test.robot
