[project]
name = "try-rf"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "robotframework>=7.0",
    "robotframework-seleniumlibrary>=6.3.0",
    "robotframework-reportportal>=5.5.8",
    "distutils-pytest>=0.2.1",
    "pip>=24.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/try_rf"]
